fix: headline text is overlapped with menu

--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -60,7 +60,7 @@
 
   #__layout {
     main {
-      padding: 60px 0 95px;
+      padding: 93px 0 63px;
       min-height: 100vh;
       //height: 0 !important;
 
